@@ -16,9 +16,14 @@
 org.exolab.castor.parser=org.apache.xerces.parsers.SAXParser
 
 # Defines the (default) XML serializer factory to use by Castor, which must
-# implement org.exolab.castor.xml.SerializerFactory;
-# Default is org.exolab.castor.xml.XercesXMLSerializerFactory
+# implement org.exolab.castor.xml.SerializerFactory; default is 
+# org.exolab.castor.xml.XercesXMLSerializerFactory
+# 
+# When using Castor XML with JDK 5.0, you may switch to the XercesJDK5XMLSerializerFactory
+# which will use the Xerces instance as shipped with the JDK itself; this avoids
+# having to download another Xerces instance and installing it. 
 org.exolab.castor.xml.serializer.factory=org.exolab.castor.xml.XercesXMLSerializerFactory
+#org.exolab.castor.xml.serializer.factory=org.exolab.castor.xml.XercesJDK5XMLSerializerFactory
 
 # Defines the NodeType for use with Java primitive types (int, long, boolean,
 # etc). This value is only used by the Introspector.  Valid values are either
